# sentineldns

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
apps/macos/: Package.swift
apps/macos/SentinelDNS/: App.swift
apps/macos/SentinelDNS/Models/: APIClient.swift  DTOs.swift
apps/macos/SentinelDNS/Resources/: SampleSimulatedEvents.jsonl
apps/macos/SentinelDNS/Views/: ActivityView.swift  AlertsView.swift  DashboardView.swift  SettingsView.swift
data/simulations/: sample.jsonl
docs/: BUILD_SPEC.md  RELEASE_CHECKLIST.md
notebooks/: 01_domain_risk_train_eval.executed.ipynb  01_domain_risk_train_eval.ipynb  02_anomaly_train_eval.executed.ipynb  02_anomaly_train_eval.ipynb
src/sentineldns/: __init__.py  config.py
src/sentineldns/cli/: __init__.py  main.py
src/sentineldns/data/: build_dataset.py  download.py  live_monitor.py  normalize.py  simulations.py
src/sentineldns/features/: domain_features.py  window_features.py
src/sentineldns/models/: __init__.py  anomaly.py  domain_risk.py  explain.py  export.py
src/sentineldns/service/: __init__.py  api.py  run.py  schemas.py
tests/: test_api_smoke.py  test_domain_features.py  test_live_monitor_privacy.py  test_normalize.py
